Bug 428039 - Holding a key does not repeat it like it should [Wayland][kwin][kwayland-server]
Summary: Holding a key does not repeat it like it should [Wayland][kwin][kwayland-server]
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: git master
Platform: Netrunner Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2020-10-21 02:19 UTC by Leszek Lesner
Modified: 2020-10-21 17:39 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Leszek Lesner 2020-10-21 02:19:57 UTC
SUMMARY
Keyboard repeat is broken. Holding a key does not repeat it like it should.

STEPS TO REPRODUCE
1. Open a wayland session
2. open a terminal 
3. press and hold a key

OBSERVED RESULT
Only one key press is recorded and printed in the terminal

EXPECTED RESULT
as long as I hold it should repeat the key

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: master
(available in About System)
KDE Plasma Version: master
KDE Frameworks Version: master
Qt Version: 5.15.2

ADDITIONAL INFORMATION
It has to do with these changes: 
https://invent.kde.org/plasma/kwayland-server/-/commit/8a6d17f2cbfadee783d1664ec7e59e521075cfd5
https://invent.kde.org/plasma/kwin/-/commit/5e037570fe90d9883e887bb8f0e78d5bef8ec2f6
Reverting those two fixes the issue.
Comment 1 Bug Janitor Service 2020-10-21 03:56:40 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/372
Comment 2 Bhushan Shah 2020-10-21 11:23:06 UTC
Git commit 733692f4391ebf82f0f9a44c1a9aadab95240e43 by Bhushan Shah.
Committed on 21/10/2020 at 10:31.
Pushed by bshah into branch 'master'.

input: reconfigure after setting up the libinput

Previously seat interface was keeping track of the repeat information,
but now it is taken care by KeyboardInterface, which is created only if
the setHasKeyboard is set to true.

So, since we are setting up various capabilities on seat in libinput,
re-parse configuration here, so that various information like key repeat
is notified to kwayland-server

M  +1    -1    input.cpp

https://invent.kde.org/plasma/kwin/commit/733692f4391ebf82f0f9a44c1a9aadab95240e43
Comment 3 Nate Graham 2020-10-21 15:52:54 UTC
Is it appropriate to backport this to 5.20?
Comment 4 David Edmundson 2020-10-21 15:54:49 UTC
>Is it appropriate to backport this to 5.20?

It is not needed.
Comment 5 Bhushan Shah 2020-10-21 17:39:07 UTC
(In reply to Nate Graham from comment #3)
> Is it appropriate to backport this to 5.20?

No, the regression was from master branch, so only needed for master branch